# rusty-ssim

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  carrier_record.rs  flight_leg_records.rs  flight_records.rs  segment_records.rs
.github/workflows/: codeql.yml  publish-cli-to-packages.yml  publish-to-crates-io.yml  publish-to-pypi.yml  rust.yml  test-cli.yml  test-python.yml  test-rust.yml
cli-rusty-ssim/: Cargo.toml
cli-rusty-ssim/src/: main.rs
cli-rusty-ssim/tests/: cli_tests.rs
docs/: cli.md  python.md
py-rusty-ssim/: Cargo.toml  README.md  pyproject.toml  requirements-dev.txt
py-rusty-ssim/rusty_ssim/: __init__.py  __init__.pyi
py-rusty-ssim/rustyssim/: __init__.py  __init__.pyi
py-rusty-ssim/src/: lib.rs
py-rusty-ssim/tests/: test_intergration.py
rs-rusty-ssim/: Cargo.toml  README.md
rs-rusty-ssim/rustyssim/: Cargo.toml
rs-rusty-ssim/rustyssim/src/: lib.rs
rs-rusty-ssim/src/: lib.rs
rs-rusty-ssim/tests/: integration_tests.rs
rusty-ssim-core/: Cargo.toml  LICENSE  README.md
rusty-ssim-core/src/: lib.rs
rusty-ssim-core/src/converters/: ssim_jsons.rs  ssim_polars.rs
rusty-ssim-core/src/generators/: ssim_dataframe.rs  ssim_json.rs
rusty-ssim-core/src/records/: carrier_record.rs  flight_leg_records.rs  flight_segment.rs  segment_records.rs
rusty-ssim-core/src/utils/: ssim_exporters.rs  ssim_parser.rs  ssim_reader.rs  ssim_stream_to_file.rs  ssim_streaming.rs  ssim_streaming_reader.rs  ssim_streaming_writer.rs
rusty-ssim-core/tests/: integration_tests.rs  mod.rs  parser.rs  unit_tests.rs
src/: main.rs  old_approach.rs  parser.rs
src/converters/: polars_converter.rs  ssim_jsons.rs  ssim_polars.rs
src/generators/: ssim_dataframe.rs
src/records/: carrier_record.rs  flight_leg_records.rs  flight_records.rs
src/utils/: ssim_parser_iterator.rs  ssim_readers.rs
