[workspace]
members = [ "rusty-ssim-core", "cli-rusty-ssim", "py-rusty-ssim" , "rs-rusty-ssim/rustyssim"]
resolver = "3"

[workspace.package]
version = "0.3.1"
authors = ["William Green"]
edition = "2024"
license = "MIT"
repository = "https://github.com/wcagreen/rusty-ssim"


[workspace.dependencies]
polars = { version = "0.50.0", features = ["lazy", "parquet", "dtype-struct", "ipc"] }
serde = "1.0.218"
rusty-ssim-core = { version = "0.3.1", path="./rusty-ssim-core"}
cli-rusty-ssim = { version = "0.3.1", path="./cli-rusty-ssim"}
py-rusty-ssim = { version = "0.3.1", path="./py-rusty-ssim"}
rs-rusty-ssim = { version = "0.3.1", path="./rs-rusty-ssim"}