[workspace]
members = [ "rusty-ssim-core", "cli-rusty-ssim", "py-rusty-ssim" ]
resolver = "3"

[workspace.package]
version = "0.3.2"
authors = ["William Green"]
edition = "2024"
license = "MIT"
repository = "https://github.com/wcagreen/rusty-ssim"


[workspace.dependencies]
polars = { version = "0.50.0", features = ["lazy", "parquet", "dtype-struct", "ipc"] }
serde = "1.0.218"
rusty-ssim-core = { version = "0.3.2", path="./rusty-ssim-core"}