[workspace]
members = [ "rusty-ssim-core", "cli-rusty-ssim", "py-rusty-ssim", "rs-rusty-ssim"]
resolver = "3"

[workspace.package]
version = "0.5.4"
authors = ["William Green"]
edition = "2024"
license = "MIT"
repository = "https://github.com/wcagreen/rusty-ssim"


[workspace.dependencies]
polars = { version = "0.53.0", features = ["lazy", "parquet", "dtype-struct", "dtype-array", "ipc", "performant", "json"] }
polars-testing = { version = "0.53.0" }
tempfile = { version = "3.20.0" }
serde = "1.0.218"
rand = { version = "0.9.2" }
rusty-ssim-core = { version = "0.5.4", path="./rusty-ssim-core"}
