[package]
name = "py-rusty-ssim"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SSIM parser rust for python."

[dependencies]
pyo3 = { version = "0.25.1", features = ["abi3-py39", "extension-module", "multiple-pymethods"] }
pyo3-polars = "0.23.1"
rusty-ssim-core.workspace = true

[lib]
name = "rustyssim"
crate-type = ["cdylib"]

[package.metadata.maturin]
module-name = "rustyssim.rustyssim"