[package]
name = "py-rusty-ssim"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SSIM parser rust for python."

[dependencies]
pyo3 = { version = "0.27", features = ["abi3-py39", "extension-module", "multiple-pymethods"] }
pyo3-polars = "0.26.0"
rusty-ssim-core.workspace = true

[lib]
name = "rustyssim"
crate-type = ["cdylib"]
doc = false

[package.metadata.maturin]
module-name = "rustyssim.rustyssim"