[build-system]
requires = ["maturin>=1.3.2"]
build-backend = "maturin"

[project]
name = "rusty_ssim"
description = "This package provides a Python interface to parse SSIM files into a Polars DataFrame."
readme = "README.md"
authors = [
    { name = "William Green", email = "" },
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "polars >= 1.31.0",
    "pyarrow >= 21.0.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/wcagreen/rusty-ssim"

[tool.maturin]
include = ["rusty_ssim/*.pyi", "rusty_ssim/py.typed"]
