[build-system]
requires = ["maturin>=1.3.2"]
build-backend = "maturin"

[project]
name = "rustyssim"
description = "This package provides a Python interface to parse SSIM files into a Polars DataFrame."
version = "0.3.0"  # Add this line
readme = "README.md"
authors = [
    { name = "William Green", email = "" },
]
license = "MIT"
requires-python = ">=3.9"

dependencies = [
    "polars >= 1.31.0",
    "pyarrow >= 21.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-benchmark>=5.1.0"
]


[project.urls]
Repository = "https://github.com/wcagreen/rusty-ssim"

[tool.maturin]
include = ["rustyssim/*.pyi", "rustyssim/py.typed"]

[tool.pytest.ini_options]
pythonpath = ["."]
