[build-system]
requires = ["maturin>=1.3.2"]
build-backend = "maturin"

[project]
name = "rustyssim"
description = "This package provides a Python interface to parse SSIM files into a Polars DataFrame."

version = "0.5.4"
readme = "README.md"
authors = [
    { name = "William Green", email = "wcagreen24@gmail.com" },
]
license = "MIT"
requires-python = ">=3.10"

keywords = ["parsing", "ssim", "data"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Typing :: Typed",
]

dependencies = [
    "polars >= 1.38.1"
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-benchmark>=5.1.0"
]

[project.urls]
Repository = "https://github.com/wcagreen/rusty-ssim"
Documentation = "https://github.com/wcagreen/rusty-ssim/blob/main/docs/python.md"

[tool.maturin]
include = ["rustyssim/*.pyi", "rustyssim/py.typed", { path = "path/**/*", format = "sdist" }]

[tool.pytest.ini_options]
pythonpath = ["."]
