[package]
name = "rustyssim"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A high-performance IATA SSIM (Standard Schedules Information Manual) parser. Parses SSIM files into Polars DataFrames or exports to CSV/Parquet."
keywords = ["ssim", "iata", "aviation", "parser"]
readme = "../README.md"


[dependencies]
rusty-ssim-core.workspace = true
polars.workspace = true

[lib]
name = "rustyssim"
crate-type = ["lib"]

[dev-dependencies]
tempfile = { version = "3.20.0" }
polars-testing = { version = "0.50.0" }
rand = { version = "0.9.2" }