[package]
name = "rustyssim"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A high-performance IATA SSIM (Standard Schedules Information Manual) parser. Parses SSIM files into Polars DataFrames or exports to CSV/Parquet."
keywords = ["ssim", "iata", "aviation", "parser"]
readme = "README.md"


[dependencies]
rusty-ssim-core.workspace = true
polars.workspace = true

[lib]
name = "rustyssim"

[dev-dependencies]
tempfile.workspace = true
polars-testing.workspace = true
rand.workspace = true