[package]
name = "rusty-ssim-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core Library that serves as the backbone for SSIM parser."

[dependencies]
polars.workspace = true
serde.workspace = true
csv = "1.3.1"
rayon = "1.11.0"


[lib]
name = "rusty_ssim_core"
crate-type = ["rlib"]

[dev-dependencies]
tempfile = { version = "3.20.0" }
polars-testing = { version = "0.50.0" }