[package]
name = "rusty-ssim-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal core library for rustyssim. Not intended for direct use — use the rustyssim crate or python package instead."
readme = "README.md"

[dependencies]
polars.workspace = true
serde.workspace = true
rayon = "1.11.0"
rand = "0.9.2"


[lib]
name = "rusty_ssim_core"

[dev-dependencies]
tempfile = { version = "3.20.0" }
polars-testing = { version = "0.50.0" }